[package]
name = "barp_jni"
version = "0.1.0"
edition = "2021"

[lib]
name = "barp_jni"
crate-type = ["cdylib"]

[dependencies]
mtproto-vpn = { path = ".." }
jni = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "time", "fs"] }
log = "0.4"
android_logger = "0.14"
anyhow = "1.0"
libc = "0.2"
num-bigint = { version = "0.4", features = ["rand"] }
rand = "0.8"
chrono = "0.4"
sha1 = "0.10"
sha2 = "0.10"
rsa = "0.9"
grammers-tl-types = { git = "https://codeberg.org/Lonami/grammers", features = ["deserializable-functions", "tl-mtproto"] }
